templates/spot-config-webhook_template.yaml
---
# Source: spot-config-webhook/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-spot-config-webhook
  labels:
    app: release-name-spot-config-webhook
    chart: spot-config-webhook-0.1.6
    release: release-name
    heritage: Helm
    component: mutating-webhook
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: spotwebhook
  selector:
    app: spot-config-webhook
    release: release-name
---
# Source: spot-config-webhook/templates/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-spot-config-webhook
  labels:
    app: spot-config-webhook
    chart: spot-config-webhook-0.1.6
    release: release-name
    heritage: Helm
    component: mutating-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spot-config-webhook
      release: release-name
  template:
    metadata:
      labels:
        app: spot-config-webhook
        release: release-name
    spec:
      serviceAccountName: release-name-spot-config-webhook
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: release-name-spot-config-webhook
      - name: tmp
        emptyDir: {}
      containers:
        - name: spot-config-webhook
          image: "banzaicloud/spot-config-webhook:0.1.3"
          command:
          - "/usr/local/bin/spot-config-webhook"
          - "--tls-cert-file=/var/serving-cert/servingCert"
          - "--tls-private-key-file=/var/serving-cert/servingKey"
          - "--v=8"
          - "--secure-port=8443"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
          volumeMounts:
          - mountPath: /var/serving-cert
            name: serving-cert
          - mountPath: /tmp
            name: tmp
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          resources:
            {}
---
# Source: spot-config-webhook/templates/apiservice-webhook.yaml
apiVersion: v1
kind: List
metadata:
items:

- apiVersion: v1
  kind: Secret
  metadata:
    name: release-name-spot-config-webhook
  data:
    servingCert: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUROakNDQWg2Z0F3SUJBZ0lRSFBYV2xuWlN1Q3M0TDRTTnJCZnVYekFOQmdrcWhraUc5dzBCQVFzRkFEQVYKTVJNd0VRWURWUVFERXdwemRtTXRZMkYwTFdOaE1CNFhEVEkwTURVeE5UQTRNemd3TjFvWERUSTFNRFV4TlRBNApNemd3TjFvd056RTFNRE1HQTFVRUF4TXNjbVZzWldGelpTMXVZVzFsTFhOd2IzUXRZMjl1Wm1sbkxYZGxZbWh2CmIyc3VaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQysKNWdjR2dzbVE5TlZiMTM0ckZGYTd1cDFuMHM5WHVEMDRnL0FJZXA4S2FyWHRKQjR2OVh3bTVMa3dSU1JIbldqdgpRaHlCZE1USWJ [...]
    servingKey: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcEFJQkFBS0NBUUVBdnVZSEJvTEprUFRWVzlkK0t4Uld1N3FkWjlMUFY3ZzlPSVB3Q0hxZkNtcTE3U1FlCkwvVjhKdVM1TUVVa1I1MW83MEljZ1hURXlHMnFsQXoxeHFOLzBiVjFFQk1HMDZCL1RzR0hjSTBNTS9TbmlFTnQKTGRrSWtNYTJJK25sMnJ6RGhTQS9uL2duaU9PRWUwRy9WM3JUZy90QjQ4cU5qd2FmdzVmZVk4eUdCWEc3SzNwKwp3N3NMVFJzeWYvU04yZ25BTm5VdGh0eHZ3K0d2QmRXc1RKZzdjOG94cDVjdldJbTV4Mzl5TmppQWhtZlcxcHhsCkFLUlFTR1hTY0VGaDFGdE51cWNzUmMzZmJWcjJiL29FS2lPOHRzZTlidi96NzNLUFMyenVtdXdYa2Q5amhZYysKaENTNTdQ [...]
    caCert: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGakNDQWY2Z0F3SUJBZ0lSQVAwT2xLK1dNNytLejFySHZsYXAwZzB3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TkRBMU1UVXdPRE00TURkYUZ3MHpOREExTVRNdwpPRE00TURkYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUNaNTgyYUdRblJVRXdmdlRnVUltS0J3L1RCTjRBMUJCUGR1eUdGRGJhQ2FHdHYKNDJzWG5VRFdlVGRsMEhCMEtBL050KzRuZVNPR090NTFXbTJtTEhaY3d5aDY4cHlBYTh3aXZyd20rcU5QY2xiQwpZTUFCUTUwTXZYd0g3 [...]

- apiVersion: apiregistration.k8s.io/v1beta1
  kind: APIService
  metadata:
    name: v1beta1.admission.banzaicloud.com
  spec:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGakNDQWY2Z0F3SUJBZ0lSQVAwT2xLK1dNNytLejFySHZsYXAwZzB3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TkRBMU1UVXdPRE00TURkYUZ3MHpOREExTVRNdwpPRE00TURkYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUNaNTgyYUdRblJVRXdmdlRnVUltS0J3L1RCTjRBMUJCUGR1eUdGRGJhQ2FHdHYKNDJzWG5VRFdlVGRsMEhCMEtBL050KzRuZVNPR090NTFXbTJtTEhaY3d5aDY4cHlBYTh3aXZyd20rcU5QY2xiQwpZTUFCUTUwTXZYd0 [...]
    group: admission.banzaicloud.com
    groupPriorityMinimum: 1000
    versionPriority: 15
    service:
      name: release-name-spot-config-webhook
      namespace: default
    version: v1beta1

- apiVersion: admissionregistration.k8s.io/v1beta1
  kind: MutatingWebhookConfiguration
  metadata:
    name: release-name-spot-config-webhook
  webhooks:
  - name: deployments.spot-config-webhook.admission.banzaicloud.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/admission.banzaicloud.com/v1beta1/spotschedulings
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGakNDQWY2Z0F3SUJBZ0lSQVAwT2xLK1dNNytLejFySHZsYXAwZzB3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TkRBMU1UVXdPRE00TURkYUZ3MHpOREExTVRNdwpPRE00TURkYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUNaNTgyYUdRblJVRXdmdlRnVUltS0J3L1RCTjRBMUJCUGR1eUdGRGJhQ2FHdHYKNDJzWG5VRFdlVGRsMEhCMEtBL050KzRuZVNPR090NTFXbTJtTEhaY3d5aDY4cHlBYTh3aXZyd20rcU5QY2xiQwpZTUFCUTUwTXZY [...]
    rules:
    - operations:
      - CREATE
      apiGroups:
      - "*"
      apiVersions:
      - "*"
      resources:
      - deployments
    failurePolicy: Fail
  - name: replicasets.spot-config-webhook.admission.banzaicloud.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/admission.banzaicloud.com/v1beta1/spotschedulings
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGakNDQWY2Z0F3SUJBZ0lSQVAwT2xLK1dNNytLejFySHZsYXAwZzB3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TkRBMU1UVXdPRE00TURkYUZ3MHpOREExTVRNdwpPRE00TURkYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUNaNTgyYUdRblJVRXdmdlRnVUltS0J3L1RCTjRBMUJCUGR1eUdGRGJhQ2FHdHYKNDJzWG5VRFdlVGRsMEhCMEtBL050KzRuZVNPR090NTFXbTJtTEhaY3d5aDY4cHlBYTh3aXZyd20rcU5QY2xiQwpZTUFCUTUwTXZY [...]
    rules:
    - operations:
      - CREATE
      apiGroups:
      - "*"
      apiVersions:
      - "*"
      resources:
      - replicasets
    failurePolicy: Fail
  - name: statefulsets.spot-config-webhook.admission.banzaicloud.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/admission.banzaicloud.com/v1beta1/spotschedulings
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGakNDQWY2Z0F3SUJBZ0lSQVAwT2xLK1dNNytLejFySHZsYXAwZzB3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TkRBMU1UVXdPRE00TURkYUZ3MHpOREExTVRNdwpPRE00TURkYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUNaNTgyYUdRblJVRXdmdlRnVUltS0J3L1RCTjRBMUJCUGR1eUdGRGJhQ2FHdHYKNDJzWG5VRFdlVGRsMEhCMEtBL050KzRuZVNPR090NTFXbTJtTEhaY3d5aDY4cHlBYTh3aXZyd20rcU5QY2xiQwpZTUFCUTUwTXZY [...]
    rules:
    - operations:
      - CREATE
      apiGroups:
      - "*"
      apiVersions:
      - "*"
      resources:
      - statefulsets
    failurePolicy: Fail
